[gd_scene load_steps=13 format=3 uid="uid://bplmdr4p6ufdx"]

[ext_resource type="Texture2D" uid="uid://b7h4kogd8wh8f" path="res://assets/door/door1.png" id="1_jn6hb"]
[ext_resource type="Script" path="res://door.gd" id="1_xec54"]
[ext_resource type="Texture2D" uid="uid://c7ukh4sigpqf5" path="res://assets/door/door2.png" id="2_vkju7"]
[ext_resource type="Texture2D" uid="uid://dnxbr3rmn00n5" path="res://assets/door/door3.png" id="3_0s811"]
[ext_resource type="Texture2D" uid="uid://bsgyr58pwjv06" path="res://assets/door/door4.png" id="4_wrko6"]
[ext_resource type="Texture2D" uid="uid://bdl6mofgwy7y6" path="res://assets/door/door5.png" id="5_krfyg"]
[ext_resource type="Texture2D" uid="uid://bonr8sxaaerx1" path="res://assets/door/door6.png" id="6_1vrrx"]
[ext_resource type="Texture2D" uid="uid://3lttfdc8s0eq" path="res://assets/door/door7.png" id="7_hmbvj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1bej"]
size = Vector2(20, 29)

[sub_resource type="Animation" id="Animation_7b0gg"]
resource_name = "open"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.366667, 0.533333, 0.766667, 1.03333, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_jn6hb"), ExtResource("2_vkju7"), ExtResource("3_0s811"), ExtResource("4_wrko6"), ExtResource("5_krfyg"), ExtResource("6_1vrrx"), ExtResource("7_hmbvj")]
}

[sub_resource type="Animation" id="Animation_3rcxv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_jn6hb")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yk4ty"]
_data = {
"RESET": SubResource("Animation_3rcxv"),
"open": SubResource("Animation_7b0gg")
}

[node name="Door" type="Area2D"]
script = ExtResource("1_xec54")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_jn6hb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_x1bej")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yk4ty")
}

[node name="OpenDoorTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="OpenDoorTimer" to="." method="_on_open_door_timer_timeout"]
